--- a/html/wz/wz346_1.html
+++ b/html/wz/wz346_1.html
@@ -11,11 +11,11 @@
         display: none;
       }
     </style>
-    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 800px;"> 
+    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 800px; margin: 0 auto;"> 
       <tbody>
         <tr>
           <td>
-            <table border="0" cellpadding="0" cellspacing="0" width="800" style="margin: 0 auto 0 auto">
+            <table border="0" cellpadding="0" cellspacing="0" style="margin: 0 auto 0 auto">
               <tr>
                 <td>
                   <!-- 헤더 -->
@@ -81,17 +81,17 @@
                     </tbody>
                   </table>
                   <!-- 메인 컨텐츠 -->
-                  <table align="center" border="0" cellpadding="0" cellspacing="0" width="800" style="max-width: 800px;width: 100%">
+                  <table align="center" border="0" cellpadding="0" cellspacing="0" style="max-width: 800px;width: 100%">
                     <tbody> 
                       <tr>
                         <td>
-                          <img src="https://chaebonggi.github.io/jobaba2023/html/wz/images/wz277/wz_277_01.png" alt="zoom in 일자리 사업" width="800" height="81" style="display: block;">
+                          <img src="https://chaebonggi.github.io/jobaba2023/html/wz/images/wz277/wz_277_01.png" alt="zoom in 일자리 사업" height="81" style="display: block;">
                         </td>
                       </tr> 
                       <tr>
                         <td>
                           <a href="https://www.jobaba.net/eventInfo/eventInfoView.do?evTy=01&evSeq=121&evDt=20241129" target="_blank" style="text-decoration: none;">
-                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz346/wz246_01.png" alt="ai역량검사 이벤트" width="800" style="display: block;width: 100%">
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz346/wz246_01.png" alt="ai역량검사 이벤트" style="display: block;width: 100%">
                           </a> 
                         </td>
                       </tr> 
@@ -102,7 +102,7 @@
                     <tbody>
                       <tr>
                         <td>
-                          <img src="https://chaebonggi.github.io/jobaba2023/html/wz/images/wz277/wz_277_03.png" alt="weekly hot!" width="800" height="50" style="display: block;width: 100%;">
+                          <img src="https://chaebonggi.github.io/jobaba2023/html/wz/images/wz277/wz_277_03.png" alt="weekly hot!" height="50" style="display: block;width: 100%;">
                         </td>
                       </tr>
                       <tr>
@@ -164,10 +164,10 @@
                   <table align="center" border="0" cellpadding="0" cellspacing="0" width="800">
                     <tbody>
                       <tr>
-                        <td><img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz333/wz333_08.png" alt="bar" width="800" height="31" style="display: block;"></td>
+                        <td><img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz333/wz333_08.png" alt="bar" height="31" style="display: block;"></td>
                       </tr>
                       <tr>
-                        <td><img src="https://chaebonggi.github.io/jobaba2023/html/wz/images/wz262/wz_262_09.png" alt="공공일자리 채용정보" width="800" height="50" style="display: block;"></td>
+                        <td><img src="https://chaebonggi.github.io/jobaba2023/html/wz/images/wz262/wz_262_09.png" alt="공공일자리 채용정보" height="50" style="display: block;"></td>
                       </tr>
                       <tr>
                         <td bgcolor="#d9ecff" style="padding: 40px 30px 40px 30px;">
@@ -223,14 +223,14 @@
                       <tr>
                         <td>
                           <a href="https://answer.moaform.com/answers/MP4pqY" target="_blank" style="text-decoration: none;">
-                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz346/wz246_10.png" alt="취업 성공 축하! 취업수기 작성 이벤트" width="800" style="display: block;">                                
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz346/wz246_10.png" alt="취업 성공 축하! 취업수기 작성 이벤트" style="display: block;">                                
                           </a>
                         </td>
                       </tr>
                       <tr>
                         <td>
                           <a href="https://www.jobaba.net/interview/mainList.do" target="_blank" style="text-decoration: none;">
-                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz346/wz246_11.png" alt="ai역량검사 꿀팁" width="800" style="display: block;">                                
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz346/wz246_11.png" alt="ai역량검사 꿀팁" style="display: block;">                                
                           </a>
                         </td>
                       </tr>
