--- a/html/wz/wz347.html
+++ b/html/wz/wz347.html
@@ -11,7 +11,7 @@
         display: none;
       }
     </style>
-    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 800px;"> 
+    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 800px; margin: 0 auto;"> 
       <tbody>
         <tr>
           <td>
@@ -71,7 +71,7 @@
                               </tr>
                               <tr>
                                 <td style="color: #000000; font-family: '맑은 고딕'; font-size: 14px; text-align: center; padding-top: 20px;">
-                                  <span style="border: 2px solid #ffffff; border-radius: 20px; background: #e8e8e8; padding: 6px 24px 6px 24px; box-shadow: 0 4px 5px rgba(0,0,0,.1);">December 2024 Vol. 346</span>
+                                  <span style="border: 2px solid #ffffff; border-radius: 20px; background: #e8e8e8; padding: 6px 24px 6px 24px; box-shadow: 0 4px 5px rgba(0,0,0,.1);">December 2024 Vol. 347</span>
                                 </td>
                               </tr>
                             </tbody>
@@ -90,8 +90,8 @@
                       </tr> 
                       <tr>
                         <td>
-                          <a href="https://www.jobaba.net/eventInfo/eventInfoView.do?evTy=01&evSeq=121&evDt=20241129" target="_blank" style="text-decoration: none;">
-                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz346/wz246_01.png" alt="ai역량검사 이벤트" width="800" style="display: block;width: 100%">
+                          <a href="https://www.jobaba.net/entCntnts/exhb/exhbViewNew.do?seq=145" target="_blank" style="text-decoration: none;">
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz347/wz247_01.png" alt="용마로지스 정규직 채용" width="800" style="display: block;width: 100%">
                           </a> 
                         </td>
                       </tr> 
@@ -115,13 +115,13 @@
                                       <tbody> 
                                         <tr>
                                           <td>
-                                            <a href="https://www.jobaba.net/jobSprt/detail.do?seq=842" target="_blank">
-                                              <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz346/wz246_02.png" alt="취업지원 프로그램 「면접특강」" width="360" style="display: block;">
+                                            <a href="https://www.jobaba.net/eventInfo/eventInfoView.do?evTy=01&evSeq=121&evDt=20241129" target="_blank">
+                                              <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz347/wz247_02.png" alt="AI역량검사 이벤트" width="360" style="display: block;">
                                             </a>
                                           </td>
                                           <td>
-                                            <a href="https://www.jobaba.net/entSprt/detail.do?seq=573" target="_blank">
-                                              <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz346/wz246_03.png" alt="여성창업자 「1대1 맞춤형 창업 컨설팅」" width="360" style="display: block;">
+                                            <a href="https://www.jobaba.net/extrActv/detail.do?seq=477" target="_blank">
+                                              <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz347/wz247_03.png" alt="경기도 5070 일자리박람회" width="360" style="display: block;">
                                             </a>
                                           </td>
                                         </tr>
@@ -138,13 +138,13 @@
                                     <tbody>
                                       <tr>
                                         <td>
-                                          <a href="https://www.jobaba.net/jobSprt/detail.do?seq=322" target="_blank">
-                                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz346/wz246_04.png" alt="청년월세 한시 특별지원(2차)" width="360" style="display: block;">
+                                          <a href="https://www.jobaba.net/jobSprt/detail.do?seq=705" target="_blank">
+                                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz347/wz247_04.png" alt="경기도 청년 면접수당 3차 모집" width="360" style="display: block;">
                                           </a>
                                         </td>                                       
                                         <td>
-                                          <a href="https://www.jobaba.net/extrActv/detail.do?seq=477" target="_blank">
-                                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz346/wz246_05.png" alt="경기도 5070 일자리박람회" width="360" style="display: block;">
+                                          <a href="https://www.jobaba.net/jobSprt/detail.do?seq=842" target="_blank">
+                                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz347/wz247_05.png" alt="취업지원 프로그램 「면접특강」" width="360" style="display: block;">
                                           </a>
                                         </td>                                        
                                       </tr>
@@ -175,29 +175,29 @@
                             <tbody>                             
                               <tr>
                                 <td align="center">
-                                  <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=23410" target="_blank" style="text-decoration: none;">      
-                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz346/wz246_06.png" alt="[경기도평생교육진흥원] 제13차 직원(일반직) 채용 공고" width="740" style="vertical-align: top;">
+                                  <a href="https://apply.jobaba.net/bsns/bsnsDetailView.do?bsnsSeq=3845" target="_blank" style="text-decoration: none;">      
+                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz347/wz247_06.png" alt="[경기도청] 연말정산 보조 기간제근로자 채용 공고" width="740" style="vertical-align: top;">
                                   </a>
                                 </td>
                               </tr>
                               <tr>
                                 <td align="center">
-                                  <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=23347" target="_blank" style="text-decoration: none;">      
-                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz346/wz246_07.png" alt="[경기문화재단] 제14차 기간제 근로자 채용" width="740" style="vertical-align: top;">
+                                  <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=23341" target="_blank" style="text-decoration: none;">      
+                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz347/wz247_07.png" alt="[경기도사회서비스원] 제10차 직원 공개채용 공고" width="740" style="vertical-align: top;">
                                   </a>
                                 </td>
                               </tr>
                               <tr>
                                 <td align="center">
-                                  <a href="https://apply.jobaba.net/bsns/bsnsDetailView.do?bsnsSeq=3837" target="_blank" style="text-decoration: none;">      
-                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz346/wz246_08.png" alt="[포천시청] 2025년 제1회 기간제근로자 통합 공개채용 공고" width="740" style="vertical-align: top;">
+                                  <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=23808" target="_blank" style="text-decoration: none;">      
+                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz347/wz247_08.png" alt="[평택시문화재단] 제8차 직원 채용 공고" width="740" style="vertical-align: top;">
                                   </a>
                                 </td>
                               </tr>
                               <tr>
                                 <td align="center">
-                                  <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=23159" target="_blank" style="text-decoration: none;">      
-                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz346/wz246_09.png" alt="[화성시환경재단] 제5회 직원 공개채용 공고" width="740" style="vertical-align: top;">
+                                  <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=23833" target="_blank" style="text-decoration: none;">      
+                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz347/wz247_09.png" alt="[군포도시공사] NCS 기반 블라인드 직원 공개채용 공고" width="740" style="vertical-align: top;">
                                   </a>
                                 </td>
                               </tr>
@@ -222,15 +222,15 @@
                     <tbody>
                       <tr>
                         <td>
-                          <a href="https://answer.moaform.com/answers/MP4pqY" target="_blank" style="text-decoration: none;">
-                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz346/wz246_10.png" alt="취업 성공 축하! 취업수기 작성 이벤트" width="800" style="display: block;">                                
+                          <a href="https://www.jobaba.net/empmEdu/detail.do?seq=58680" target="_blank" style="text-decoration: none;">
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz347/wz247_10.png" alt="2024년 경기북부 직업교육 명사특강" width="800" style="display: block;">                                
                           </a>
                         </td>
                       </tr>
                       <tr>
                         <td>
                           <a href="https://www.jobaba.net/interview/mainList.do" target="_blank" style="text-decoration: none;">
-                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz346/wz246_11.png" alt="ai역량검사 꿀팁" width="800" style="display: block;">                                
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz347/wz247_11.png" alt="ai역량검사 꿀팁" width="800" style="display: block;">                                
                           </a>
                         </td>
                       </tr>
