--- a/index.html
+++ b/index.html
@@ -473,6 +473,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz346.html" class="preview" target="_blank">뉴스레터 346호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz347.html" class="preview" target="_blank">뉴스레터 347호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
