--- a/index.html
+++ b/index.html
@@ -478,6 +478,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz347.html" class="preview" target="_blank">뉴스레터 347호</a></td>
 			</tr>
+			<tr class="thema">
+				<td></td>
+				<td>테마</td>
+				<td><a href="html/thema/12.html" class="preview" target="_blank">테마 12호 일자리 지원정책 돌아보기</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
