--- a/html/thema/12.html
+++ b/html/thema/12.html
@@ -41,13 +41,13 @@
 				</div>	
 			</div>
 			<div class="imgWrap">
-				<img src="./images/20241212/recruit.png" alt="recruit">
+				<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20241212/recruit.png" alt="recruit">
 			</div>
 		</article>
 		<article class="cont01">
 			<div class="innerSection">
 				<ul class="jobLink">
-					<li><a href="" target="_blank">
+					<li><a href="https://www.jobaba.net/jobSprt/detail.do?seq=705" target="_blank">
 						<p class="cTit gBold">청년면접수당</p>
 						<ul>
 							<li>
@@ -60,7 +60,7 @@
 							</li>
 						</ul>
 					</a></li>
-					<li><a href="" target="_blank">
+					<li><a href="https://www.jobaba.net/jobSprt/detail.do?seq=87" target="_blank">
 						<p class="cTit gBold">경기청년역량강화 지원사업</p>
 						<ul>
 							<li>
@@ -73,7 +73,7 @@
 							</li>
 						</ul>
 					</a></li>
-					<li><a href="" target="_blank">
+					<li><a href="https://apply.jobaba.net/bsns/bsnsDetailView.do?bsnsSeq=3212" target="_blank">
 						<p class="cTit gBold">이음일자리 사업</p>
 						<ul>
 							<li>
@@ -86,7 +86,7 @@
 							</li>
 						</ul>
 					</a></li>
-					<li><a href="" target="_blank">
+					<li><a href="https://apply.jobaba.net/bsns/bsnsDetailView.do?bsnsSeq=3291" target="_blank">
 						<p class="cTit gBold">징검다리 일사리사업</p>
 						<ul>
 							<li>
@@ -100,7 +100,7 @@
 							</li>
 						</ul>
 					</a></li>
-					<li><a href="" target="_blank">
+					<li><a href="https://apply.jobaba.net/bsns/bsnsDetailView.do?bsnsSeq=3535" target="_blank">
 						<p class="cTit gBold">4060 맞춤형 재취업 지원사업</p>
 						<ul>
 							<li>
@@ -114,7 +114,7 @@
 							</li>
 						</ul>
 					</a></li>
-					<li><a href="" target="_blank">
+					<li><a href="https://www.jobaba.net/jobSprt/detail.do?seq=497" target="_blank">
 						<p class="cTit gBold">청년 복지포인트 사업</p>
 						<ul>
 							<li>
@@ -127,7 +127,7 @@
 							</li>
 						</ul>
 					</a></li>
-					<li><a href="" target="_blank">
+					<li><a href="https://apply.jobaba.net/bsns/bsnsDetailView.do?bsnsSeq=3844" target="_blank">
 						<p class="cTit gBold">경기도기술학교 무료교육</p>
 						<ul>
 							<li>
@@ -205,9 +205,9 @@
 							<li data-aos="flip-left" data-aos-duration="1500" data-aos-once="true">
 								<div class="lTit new"><p class="gBold">청년 주택 드림대출</p></div>
 								<div class="txtBox">									
-									<p class="lTxt"><span class="gBold">신규 주택 청약 시<br>
-										최대 분양가의 80%까지<br>
-										최저 2.2% 금리 대출 지원</span></p>
+									<p class="lTxt">신규 주택 청약 시<br>
+										최대 분양가의 <span class="gBold">80%까지<br>
+										최저 2.2% 금리</span> 대출 지원</span></p>
 								</div>
 							</li>
 						</ul>
@@ -234,8 +234,8 @@
 							<li data-aos="flip-left" data-aos-duration="1500" data-aos-once="true">
 								<div class="lTit new"><p class="gBold">미취업 졸업생 지원</p></div>
 								<div class="txtBox">									
-									<p class="lTxt"><span class="gBold">채용, 박람회 참여, 자격증 교육 등의<br>
-										대학 졸업생 특화 프로그램</span></p>
+									<p class="lTxt">채용, 박람회 참여, 자격증 교육 등의<br>
+										<span class="gBold">대학 졸업생 특화 프로그램</span></p>
 								</div>
 							</li>
 							<li data-aos="flip-left" data-aos-duration="1500" data-aos-once="true">
@@ -279,8 +279,8 @@
 							<li data-aos="flip-left" data-aos-duration="1500" data-aos-once="true">
 								<div class="lTit new"><p class="gBold">아이돌봄 서비스 확대</p></div>
 								<div class="txtBox">									
-									<p class="lTxt tlt">직장어린이집 긴급돌봄<br> 서비스 신설<br>
-										<span class="gBold">: 65개소, 약 1만 가구 혜택</span></p>
+									<p class="lTxt">직장어린이집 긴급돌봄 서비스<br>
+										<span class="gBold">(65개소, 약 1만 가구)</span></p>
 								</div>
 							</li>
 						</ul>
@@ -296,7 +296,8 @@
 									<p class="gBold lTxt02">지원금 확대</p>
 									<p class="lTxt">월 최대 80만원 <span class="gBold">→ 월 최대 120만원</span></p>
 									<hr class="iLine">
-									<p class="lTxt tlt">지급조건 확대<br> <span class="gBold">: 파견근로자로 사용하여도 지급 가능</span></p>
+									<p class="gBold lTxt02">지급조건 확대</p>
+									<p class="lTxt"><span class="gBold">(파견근로자로 사용하여도 지급)</span></p>
 								</div>
 							</li>
 							<li data-aos="flip-left" data-aos-duration="1500" data-aos-once="true">
@@ -321,15 +322,15 @@
 							<li data-aos="flip-left" data-aos-duration="1500" data-aos-once="true">
 								<div class="lTit"><p class="gBold">중장년 계속고용장려금 개편</p></div>
 								<div class="txtBox">
-									<p class="lTxt">1명당 분기 <span class="gBold">90만원 지원</span> (최대 3년)<br>
+									<p class="lTxt">분기별 1인당 <span class="gBold">90만원 지원</span><br>
 										예산 확대(357억)</p>
 								</div>
 							</li>
 							<li data-aos="flip-left" data-aos-duration="1500" data-aos-once="true">
 								<div class="lTit"><p class="gBold">노인 일자리 창출 대폭 확대</p></div>
 								<div class="txtBox">
-									<p class="lTxt"><span class="gBold">예산 확대</span> : 약 24조 (+2조)</p>
-									<p class="lTxt"><span class="gBold">노인일자리 확대</span> : 약 110만개 제공</p>
+									<p class="lTxt">예산 확대 : <span class="gBold">약 24조 (+2조)</span></p>
+									<p class="lTxt">일자리 확대  : <span class="gBold">약 110만개 제공</span></p>
 								</div>
 							</li>
 							<li data-aos="flip-left" data-aos-duration="1500" data-aos-once="true">
@@ -358,7 +359,7 @@
 		<article class="cont03">
 			<div class="innerSection">
 				<div class="imgWrap">
-					<img src="./images/20241212/cont03_tit.png" alt="">
+					<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20241212/cont03_tit.png" alt="">
 				</div>
 				<p>한 해동안 잡아바에 보내주신 많은 관심과 사랑에 감사 드립니다.<br>
 					다가오는 2025년 새해 복 많이 받으시고, <br>
@@ -368,7 +369,7 @@
 		<article class="cont04">
 			<div class="innerSection">
 				<div class="imgWrap">
-					<img src="./images/20241212/cont04_tit.png" alt="잡아바">
+					<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20241212/cont04_tit.png" alt="잡아바">
 				</div>
 			</div>
 		</article>
