--- a/index.html
+++ b/index.html
@@ -488,6 +488,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz348.html" class="preview" target="_blank">뉴스레터 348호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz349.html" class="preview" target="_blank">뉴스레터 349호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
