--- a/html/wz/wz350.html
+++ b/html/wz/wz350.html
@@ -89,10 +89,9 @@
                         </td>
                       </tr> 
                       <tr>
-                        <!-- https://chaebonggi.github.io/jobabamain/html/wz/images/wz349/wz349_01.png -->
                         <td>
                           <a href="https://www.jobaba.net/jobSprt/detail.do?seq=930" target="_blank" style="text-decoration: none;">
-                            <img src="./images/wz350/wz350_01.png" alt="인턴IN메타" width="800" style="display: block;width: 100%">
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz350/wz350_01.png" alt="인턴IN메타" width="800" style="display: block;width: 100%">
                           </a> 
                         </td>
                       </tr> 
@@ -117,12 +116,12 @@
                                         <tr>
                                           <td>
                                             <a href="https://www.jobaba.net/jobSprt/detail.do?seq=260" target="_blank">
-                                              <img src="./images/wz350/wz350_02.png" alt="경기청년 기회사다리금융" width="360" style="display: block;">
+                                              <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz350/wz350_02.png" alt="경기청년 기회사다리금융" width="360" style="display: block;">
                                             </a>
                                           </td>
                                           <td>
                                             <a href="https://www.jobaba.net/extrActv/detail.do?seq=528" target="_blank">
-                                              <img src="./images/wz350/wz350_03.png" alt="2025년 개편 KOICA 프로젝트 봉사단" width="360" style="display: block;">
+                                              <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz350/wz350_03.png" alt="2025년 개편 KOICA 프로젝트 봉사단" width="360" style="display: block;">
                                             </a>
                                           </td>
                                         </tr>
@@ -140,12 +139,12 @@
                                       <tr>
                                         <td>
                                           <a href="https://www.jobaba.net/empmEdu/detail.do?seq=60599" target="_blank">
-                                            <img src="./images/wz350/wz350_04.png" alt="2025 연구장비분야 전문인력양성과정" width="360" style="display: block;">
+                                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz350/wz350_04.png" alt="2025 연구장비분야 전문인력양성과정" width="360" style="display: block;">
                                           </a>
                                         </td>                                       
                                         <td>
                                           <a href="https://www.jobaba.net/jobSprt/detail.do?seq=322" target="_blank">
-                                            <img src="./images/wz350/wz350_05.png" alt="청년월세 특별지원 2차" width="360" style="display: block;">
+                                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz350/wz350_05.png" alt="청년월세 특별지원 2차" width="360" style="display: block;">
                                           </a>
                                         </td>                                        
                                       </tr>
@@ -177,28 +176,28 @@
                               <tr>
                                 <td align="center">
                                   <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=24735" target="_blank" style="text-decoration: none;">      
-                                    <img src="./images/wz350/wz350_06.png" alt="[군포시자원봉사센터] 기간제 근로자 채용 공고" width="720" style="vertical-align: top;">
+                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz350/wz350_06.png" alt="[군포시자원봉사센터] 기간제 근로자 채용 공고" width="720" style="vertical-align: top;">
                                   </a>
                                 </td>
                               </tr>
                               <tr>
                                 <td align="center">
                                   <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=24638" target="_blank" style="text-decoration: none;">      
-                                    <img src="./images/wz350/wz350_07.png" alt="[경기도경제과학진흥원] 시설운영직 채용 공고" width="720" style="vertical-align: top;">
+                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz350/wz350_07.png" alt="[경기도경제과학진흥원] 시설운영직 채용 공고" width="720" style="vertical-align: top;">
                                   </a>
                                 </td>
                               </tr>
                               <tr>
                                 <td align="center">
                                   <a href="https://apply.jobaba.net/bsns/bsnsDetailView.do?bsnsSeq=3951" target="_blank" style="text-decoration: none;">      
-                                    <img src="./images/wz350/wz350_08.png" alt="[경기도농업기술원] 원예연구과 기간제근로자 채용 공고" width="720" style="vertical-align: top;">
+                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz350/wz350_08.png" alt="[경기도농업기술원] 원예연구과 기간제근로자 채용 공고" width="720" style="vertical-align: top;">
                                   </a>
                                 </td>
                               </tr>
                               <tr>
                                 <td align="center">
                                   <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=24868" target="_blank" style="text-decoration: none;">      
-                                    <img src="./images/wz350/wz350_09.png" alt="[용인도시공사] 2024년 제7회 기간제근로자 공개채용 공고" width="720" style="vertical-align: top;">
+                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz350/wz350_09.png" alt="[용인도시공사] 2024년 제7회 기간제근로자 공개채용 공고" width="720" style="vertical-align: top;">
                                   </a>
                                 </td>
                               </tr>
@@ -224,14 +223,14 @@
                       <tr>
                         <td>
                           <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=25106" target="_blank" style="text-decoration: none;">
-                            <img src="./images/wz350/wz350_10.png" alt="경기도일자리재단 유기계약직 직원 채용 공고" width="800" style="display: block;">                                
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz350/wz350_10.png" alt="경기도일자리재단 유기계약직 직원 채용 공고" width="800" style="display: block;">                                
                           </a>
                         </td>
                       </tr>
                       <tr>
                         <td>
                           <a href="https://www.jobaba.net/interview/mainList.do" target="_blank" style="text-decoration: none;">
-                            <img src="./images/wz350/wz350_11.png" alt="ai역량검사 꿀팁" width="800" style="display: block;">                                
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz350/wz350_11.png" alt="ai역량검사 꿀팁" width="800" style="display: block;">                                
                           </a>
                         </td>
                       </tr>
