--- a/html/wz/wz350.html
+++ b/html/wz/wz350.html
@@ -31,31 +31,31 @@
                                     <tbody>
                                       <tr>
                                         <td>
-                                          <a href="http://post.naver.com/gjf_job" style="outline: 0; border: none; text-decoration: none;">
+                                          <a href="http://post.naver.com/gjf_job" target="_blank" style="outline: 0; border: none; text-decoration: none;">
                                             <img src="https://chaebonggi.github.io/jobabamain/html/wz/common/icon_blog.png" alt="네이버포스트" width="25" height="25">
                                           </a>
                                         </td>
                                         <td style="font-size: 0; line-height: 0;" width="4">&nbsp;</td>
                                         <td>
-                                          <a href="https://twitter.com/jobabanet">
+                                          <a href="https://twitter.com/jobabanet" target="_blank">
                                             <img src="https://chaebonggi.github.io/jobabamain/html/wz/common/icon_twitter.png" alt="트위터" width="25" height="25">
                                           </a>
                                         </td>
                                         <td style="font-size: 0; line-height: 0;" width="4">&nbsp;</td>
                                         <td>
-                                          <a href="https://www.instagram.com/jobabanet">
+                                          <a href="https://www.instagram.com/jobabanet" target="_blank">
                                             <img src="https://chaebonggi.github.io/jobabamain/html/wz/common/icon_instagram.png" alt="인스타그램" width="25" height="25">
                                           </a>
                                         </td>
                                         <td style="font-size: 0; line-height: 0;" width="4">&nbsp;</td>
                                         <td>
-                                          <a href="https://www.youtube.com/channel/UC69DhLD0FUmLgP9BsxitbDw">
+                                          <a href="https://www.youtube.com/channel/UC69DhLD0FUmLgP9BsxitbDw" target="_blank">
                                             <img src="https://chaebonggi.github.io/jobabamain/html/wz/common/icon_youtube.png" alt="유튜브" width="25" height="25">
                                           </a>
                                         </td>
                                         <td style="font-size: 0; line-height: 0;" width="4">&nbsp;</td>
                                         <td>
-                                          <a href="https://www.facebook.com/jobabanet">
+                                          <a href="https://www.facebook.com/jobabanet" target="_blank">
                                             <img src="https://chaebonggi.github.io/jobabamain/html/wz/common/icon_facebook.png" alt="페이스북" width="25" height="25">
                                           </a>
                                         </td>
