--- a/index.html
+++ b/index.html
@@ -503,6 +503,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz350.html" class="preview" target="_blank">뉴스레터 350호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>페이지</td>
+				<td><a href="html/page/구직자이력서.html" class="preview" target="_blank">구직자이력서</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
