--- a/index.html
+++ b/index.html
@@ -508,6 +508,11 @@
 				<td>페이지</td>
 				<td><a href="html/page/구직자이력서.html" class="preview" target="_blank">구직자이력서</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>페이지</td>
+				<td><a href="html/page/공고등록.html" class="preview" target="_blank">공고등록</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
